cleanup, remove some files

--- a/fonts.html
+++ b/fonts.html
@@ -3,13 +3,13 @@ layout: default
 selected: fonts
 assets:
     -   name: Rubik
-        description: Eco Org primary brand font
+        description: Eco.org primary brand font
         poster: asset-ecoorg-font-rubik-poster.svg
         sources:
             -   url: fonts/Rubik.zip
                 filetype: .zip
     -   name: PTSerif
-        description: Eco Org secondary brand font
+        description: Eco.org secondary brand font
         poster: asset-ecoorg-font-ptserif-poster.svg
         sources:
             -   url: fonts/PTSerif.zip
