--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 layout: default
 selected: index
 assets:
-    -   name: Logo black
-        description: Eco Org logo.
+    -   name: Brandmark dark
+        description: Eco.org brandmark with dark content
         poster: asset-ecoorg-logo-icon-black-poster.svg
         sources:
             -   url: logos/eco-org-logo-black.svg
                 filetype: .svg
             -   url: logos/eco-org-logo-black.png
                 filetype: .png
-    -   name: Logo white
-        description: Eco Org logo.
+    -   name: Brandmark light
+        description: Eco.org brandmark with light content
         poster: asset-ecoorg-logo-icon-white-poster.svg
         colorMode: dark
         sources:
@@ -19,16 +19,16 @@ assets:
                 filetype: .svg
             -   url: logos/eco-org-logo-white.png
                 filetype: .png
-    -   name: Brandmark black
-        description: Eco Org brandmark.
+    -   name: Logo dark
+        description: Eco.org logo with dark content
         poster: asset-ecoorg-logo-brandmark-black-poster.svg
         sources:
             -   url: logos/eco-org-brandmark-black.svg
                 filetype: .svg
             -   url: logos/eco-org-brandmark-black.png
                 filetype: .png
-    -   name: Brandmark white
-        description: Eco Org brandmark.
+    -   name: Logo light
+        description: Eco.org logo with light content
         poster: asset-ecoorg-logo-brandmark-white-poster.svg
         colorMode: dark
         sources:
