--- a/backgrounds.html
+++ b/backgrounds.html
@@ -3,19 +3,19 @@ layout: default
 selected: backgrounds
 assets:
     -   name: Blue Background
-        description: Eco Org branded background.
+        description: Eco.org branded background
         poster: asset-ecoorg-bkg-blue-poster.png
         sources:
             -   url: backgrounds/eco-org-bkg-blue.png
                 filetype: .png
     -   name: Yellow Background
-        description: Eco Org branded background.
+        description: Eco.org branded background
         poster: asset-ecoorg-bkg-yellow-poster.png
         sources:
             -   url: backgrounds/eco-org-bkg-yellow.png
                 filetype: .png
     -   name: Brown Background
-        description: Eco Org branded background.
+        description: Eco.org branded background
         poster: asset-ecoorg-bkg-brown-poster.png
         sources:
             -   url: backgrounds/eco-org-bkg-brown.png
